Add Cloudflare Pages Functions API for surveys

--- a/analytics.html
+++ b/analytics.html
@@ -12,7 +12,7 @@
 <body class="analytics-page">
   <div class="app-container">
     <header class="app-header">
-      <div class="logo" onclick="navigateTo('index.html')">퀘스트 설문 마법사</div>
+      <div class="logo" onclick="navigateTo('index.html')">설문 마법사</div>
       <nav>
         <button class="nav-btn" onclick="navigateTo('index.html')">대시보드</button>
         <button class="nav-btn" onclick="navigateTo('dashboard.html')">설문 관리</button>
