--- a/dashboard.html
+++ b/dashboard.html
@@ -591,7 +591,7 @@
     <div class="app-container">
         <!-- Header -->
         <header class="app-header">
-            <div class="logo" onclick="navigateTo('index.html')">퀘스트 설문 마법사</div>
+            <div class="logo" onclick="navigateTo('index.html')">설문 마법사</div>
             <nav>
                 <button class="nav-btn" onclick="navigateTo('index.html')">대시보드</button>
                 <button class="nav-btn active">설문 관리</button>
