Add Cloudflare Pages Functions API for surveys

--- a/dashboard.html
+++ b/dashboard.html
@@ -616,6 +616,7 @@
             <div class="survey-grid-section">
                 <div class="section-header">
                     <h2>📋 설문 목록</h2>
+                    <button class="btn-add-folder" onclick="setAllSurveysActive()">전체 설문 배포 시작</button>
                 </div>
 
                 <!-- Filter and Sort Bar -->
