Add Cloudflare Pages Functions API for surveys

--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@
                 </div>
 
                 <div class="form-group">
+                    <label>주제 예시</label>
+                    <div class="ai-topic-presets">
+                        <button type="button" class="ai-topic-btn" data-topic="게임 성향 분석">게임 성향 분석</button>
+                        <button type="button" class="ai-topic-btn" data-topic="직장 만족도 조사">직장 만족도 조사</button>
+                        <button type="button" class="ai-topic-btn" data-topic="고객 만족도 조사">고객 만족도 조사</button>
+                        <button type="button" class="ai-topic-btn" data-topic="교육 / 강의 만족도">교육 / 강의 만족도</button>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label>질문 개수를 선택해주세요.</label>
                     <div class="ai-count-buttons">
                         <button type="button" class="ai-count-btn selected" data-count="5">5문항</button>
