--- a/survey.html
+++ b/survey.html
@@ -37,9 +37,11 @@
             width: 100%;
             height: 100%;
             background-image: url('images/배경.png');
-            background-size: cover;
+            /* 모바일에서 잘리지 않도록 contain + 어두운 배경 사용 */
+            background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
+            background-color: #000;
             z-index: 0; /* 모든 콘텐츠 뒤로 보내기 (부모 배경 뒤로는 가지 않도록 0으로 설정) */
         }
 
@@ -87,7 +89,7 @@
         
         #question-text,
         #questionContainer p {
-            font-size: 1.7rem;
+            font-size: 1.7rem; /* 데스크톱 기준 (약 27~28px) */
             margin-bottom: 20px;
             min-height: 80px;
         }
@@ -189,19 +191,42 @@
         @media (max-width: 768px) {
             #game-container {
                 justify-content: flex-start;
-                padding-top: 40px;
-                padding-bottom: 40px;
+                padding-top: 32px;
+                padding-bottom: 32px;
             }
             #text-box {
-                margin: 10px;
+                margin: 12px;
                 width: 90%;
             }
             #optionsContainer {
                 gap: 12px;
             }
+            /* 모바일 기준 질문/텍스트 타이포 조정 (약 20px 전후) */
+            #question-text,
+            #questionContainer p {
+                font-size: 1.25rem; /* 약 20px */
+                line-height: 1.35;
+                word-break: keep-all;
+                min-height: auto;
+            }
+            .text-input {
+                font-size: 0.95rem; /* ~15px */
+                padding: 12px 14px;
+            }
+            .text-input::placeholder {
+                font-size: 0.95rem;
+            }
             .option-btn {
                 padding: 12px 14px;
-                font-size: 1rem;
+                font-size: 1.05rem; /* ~17px */
+                line-height: 1.35;
+                white-space: normal;
+            }
+            .submit-btn {
+                font-size: 1.05rem; /* ~17px */
+                padding: 14px 0;
+                border-radius: 12px;
+                width: 90%;
             }
         }
     </style>
