--- a/survey.html
+++ b/survey.html
@@ -200,6 +200,11 @@
             }
             #optionsContainer {
                 gap: 12px;
+                /* 모바일에서 보기(질문 선택지)가 많을 때, 아래가 잘리지 않고
+                   위/아래로 슬라이드(스크롤)해서 볼 수 있도록 별도 스크롤 영역으로 지정 */
+                max-height: 50vh;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch;
             }
             /* 모바일 기준 질문/텍스트 타이포 조정 (약 20px 전후) */
             #question-text,
