--- a/survey.html
+++ b/survey.html
@@ -100,7 +100,7 @@
             gap: 20px;
             /* PC/모바일 공통: 선택지가 많을 때는 일부만 보이고,
                나머지는 내부 스크롤로 확인하도록 높이 제한 */
-            max-height: 320px; /* 버튼 높이 기준 약 5개 분량 */
+            max-height: 260px; /* 데스크톱 기준 약 4~5개 분량으로 더 타이트하게 조정 */
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
         }
