Add Cloudflare Pages Functions API for surveys

--- a/survey.html
+++ b/survey.html
@@ -102,6 +102,7 @@
                나머지는 내부 스크롤로 확인하도록 높이 제한 */
             max-height: 260px; /* 데스크톱 기준 약 4~5개 분량으로 더 타이트하게 조정 */
             overflow-y: auto;
+            overflow-x: hidden; /* 가로 스크롤은 숨기고 세로만 허용 */
             -webkit-overflow-scrolling: touch;
         }
         
